@@ -1,4 +1,7 @@
 Change log
+2018-12-31
+1. Added temporary multiplicative factor for free hormone values
+
 2018-04-25
 1. Changed FT4 normal range to 8 - 17 ng/L
 2. Changed FT3 normal range to 2.2 - 4.4 ng/L
